extract predicate methods